--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,8 @@ config/initializers/secret_token.rb
 Gemfile.lock, .ruby-version, .ruby-gemset
 
 /vendor/assets/bower_components
-*.bowerrc
-bower.json
 
 .powenv
 
 .byebug_history
+node_modules
